--- a/Frontend/Todo-UI/src/Components/Header.css
+++ b/Frontend/Todo-UI/src/Components/Header.css
@@ -24,16 +24,19 @@ body, button, div {
 
 .header-container{
     display: flex;
-    justify-content:space-between;
+    justify-content: center;
 }
 
 .logout-btn{
+    width: 100px;
+    padding: 0.75rem;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
     font-size: 1rem;
-    padding: 1px 30px;
-    background-color: unset;
-    border: 2px solid black;
-    border-radius: 8px;
-    transition: background-color 0.1s ease-in-out, transform 0.3s ease, color 0.1s ease;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .logout-btn:hover{
