--- a/Frontend/Todo-UI/src/Components/TodosPage.css
+++ b/Frontend/Todo-UI/src/Components/TodosPage.css
@@ -217,3 +217,80 @@
 .addTodo-btn:hover {
   transform: scale(1.02);
 }
+
+.todo-bottom-bar{
+  display: flex;
+  justify-content: end;
+}
+
+.material-symbols-outlined{
+  color: #666;
+  size: 18px;
+  transition: transform 0.3s ease;
+  padding-left: 10px;
+}
+.material-symbols-outlined:hover{
+  transform: scale(1.05)
+  
+}
+
+
+.editTodo-form {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+
+.editTodo-form-container {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 10px;
+  width: 400px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+
+.close-button {
+  position: absolute;
+  top: 12px;
+  right: 14px;
+  background: transparent;
+  border: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+
+.editTodo-container input {
+  width: 100%;
+  padding: 0.6rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+
+.editTodo-btn {
+  background-color: black;
+  color: white;
+  padding: 0.6rem 1.2rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  transition: transform 0.2s ease;
+}
+
+.editTodo-btn:hover {
+  transform: scale(1.02);
+}
