--- a/Frontend/Todo-UI/src/Components/TodosPage.css
+++ b/Frontend/Todo-UI/src/Components/TodosPage.css
@@ -6,7 +6,7 @@
   }
   
   body {
-    font-family: Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
   
   .todo-page-container {
@@ -71,7 +71,8 @@
   .lhs-container-heading {
     line-height: 1;
     margin-bottom: 2rem;
-    font-size: 1.3rem;
+    font-size: 2.3rem;
+    text-align: center;
   }
   
   .lhs-container-btn {
@@ -94,7 +95,7 @@
     margin: 2rem 2rem 2rem 0.1rem;
     height: 100%;
     overflow-y: auto;
-    column-count: 3;
+    column-count: 2;
     column-gap: 1rem;
     background-color: #fff;
   }
@@ -128,6 +129,16 @@
     cursor: pointer;
   }
 
+  .todo-element {
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  .todo-element:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2);
+  }
+
   .todo-data-checkbox {
     flex-shrink: 0;
     width: 24px;
@@ -142,8 +153,9 @@
   
   .todo-title {
     font-size: 1.1rem;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.5rem;
     font-weight: bold;
+    line-height: 1;
   }
   
   .todo-description {
@@ -224,14 +236,17 @@
 }
 
 .material-symbols-outlined{
-  color: #666;
+  color: white;
+  background-color: #666;
   size: 18px;
-  transition: transform 0.3s ease;
-  padding-left: 10px;
+  transition: all 0.3s ease;
+  margin-left: 10px;
+  padding: 0px 10px;
+  border-radius: 10px;
 }
 .material-symbols-outlined:hover{
-  transform: scale(1.05)
-  
+  /* color: black; */
+  background-color: #333;
 }
 
 
@@ -258,6 +273,16 @@
   position: relative;
 }
 
+.editTodo-form-container h1 {
+  text-align: center;
+}
+
+.editTodo-form-container p{
+  text-align: center;
+  font-size: 0.85rem;
+  color: #666;
+  margin-bottom: 1.5rem;
+}
 
 .close-button {
   position: absolute;
