--- a/Frontend/Todo-UI/src/Components/TodosPage.css
+++ b/Frontend/Todo-UI/src/Components/TodosPage.css
@@ -319,3 +319,44 @@
 .editTodo-btn:hover {
   transform: scale(1.02);
 }
+
+
+/* MOBILE DEVICES */
+@media only screen and (max-width: 1024px) {
+
+.todo-content {
+  flex-direction: column;
+  height: fit-content;
+  column-gap: 2rem;
+}
+
+.lhs-container {
+  max-width: 100%;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 8px;
+}
+
+.lhs-container-heading {
+  margin-bottom: 1rem;
+}
+
+.rhs-container {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  height: 100%;
+  overflow-y: auto;
+  column-count: 1;
+  column-gap: 1rem;
+}
+
+.todo-page-header {
+  padding: 0.3rem 0.3rem;
+}
+
+.logout-button {
+  width: auto;
+  padding: 0.5rem 0.5rem;
+}
+
+}
